--- a/README.adoc
+++ b/README.adoc
@@ -1,18 +1,5 @@
-:repository-owner: arduino-libraries
-:repository-name: Stepper
+# This Fork is for ESP32 only but runs without any delay 
 
-= {repository-name} Library for Arduino =
-
-image:https://github.com/{repository-owner}/{repository-name}/actions/workflows/check-arduino.yml/badge.svg["Check Arduino status", link="https://github.com/{repository-owner}/{repository-name}/actions/workflows/check-arduino.yml"]
-image:https://github.com/{repository-owner}/{repository-name}/actions/workflows/compile-examples.yml/badge.svg["Compile Examples status", link="https://github.com/{repository-owner}/{repository-name}/actions/workflows/compile-examples.yml"]
-image:https://github.com/{repository-owner}/{repository-name}/actions/workflows/spell-check.yml/badge.svg["Spell Check status", link="https://github.com/{repository-owner}/{repository-name}/actions/workflows/spell-check.yml"]
-
-This library allows you to control unipolar or bipolar stepper motors. To use it you will need a stepper motor, and the appropriate hardware to control it.
-   
-  
-  
-  
-# This Fork is for ESP32 only
 
 A Timer based Library for stepper running without any delay functions
 
